quick refactorings II